--- a/configuration/partials/opportunity/register-interest-faux-chip.hbs
+++ b/configuration/partials/opportunity/register-interest-faux-chip.hbs
@@ -5,7 +5,8 @@
 </div>
 {{else}}
 <a href="https://search.volunteerscotland.net/register-interest/{{Id}}/{{title_slug}}?utm_source=saltire-awards&utm_campaign=search&utm_medium=website" class="chip chip--register-interest">
-  <span class="far fa-hand-paper" aria-hidden="true"></span>
-  <span class="noselect">&ensp;I want to volunteer</span>
+  {{!-- <span class="far fa-hand-paper" aria-hidden="true"></span> --}}
+  <span class="noselect">I want to volunteer&ensp;</span>
+  <span class="far fa-external-link" aria-hidden="true"></span>
 </a>
 {{/if ~}}
