--- a/configuration/templates/opportunities/search.hbs
+++ b/configuration/templates/opportunities/search.hbs
@@ -97,5 +97,8 @@
 
   <div class="foot">
     {{> pagination firstLastNavigation=true paging=@root.data.search_data.detailed_results.pagination}}
+    <div class="align-centre">
+      <a href="https://search.volunteerscotland.net"><img src="{{~>asset_url url='images/logos/volunteer_scotland_search.png'~}}" class="b-margin responsive-img" style="height:10vh;min-height:80px;" /></a>
+    </div>
   </div>
 </div>
