added vs logo to opp page

--- a/configuration/templates/opportunities/opportunity.hbs
+++ b/configuration/templates/opportunities/opportunity.hbs
@@ -29,4 +29,8 @@
     We could not find the opportunity you were looking for. It may have been removed or expired.
   </p>
   {{/compare ~}}
+
+  <div class="align-centre t-margin-full">
+    <a href="https://search.volunteerscotland.net"><img src="{{~>asset_url url='images/logos/volunteer_scotland_search.png'~}}" class="b-margin responsive-img" style="height:10vh;min-height:80px;" /></a>
+  </div>
 </div>
