--- a/src/main.scss
+++ b/src/main.scss
@@ -880,6 +880,14 @@ ul.fa-ul {
   }
 }
 
+.form-horizontal {
+  margin-left: -.4rem;
+  margin-right: -.4rem;
+}
+// .column .column {
+//   padding-left: 0;
+// }
+
 .cards.equal-height {
   .column {
     padding-bottom: 0.8rem;
