signposting improvements for admin/volunteer sign up/in

--- a/configuration/templates/account/auth/sign-in-admin.hbs
+++ b/configuration/templates/account/auth/sign-in-admin.hbs
@@ -32,6 +32,17 @@
       <div class="v-margin-full">
         <a href="/sign-up-admin" class="btn">Request approval</a>
       </div>
+      <h3>
+        Volunteer?
+      </h3>
+      <div class="my-saltire columns t-margin">
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-up" class="btn text-center">Sign up as a volunteer</a>
+        </div>
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-in" class="btn text-centre">Sign in</a>
+        </div>
+      </div>
     </div>
   </div>
 </form>
