--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -58,14 +58,32 @@
       </p>
     </div>
   </div>
-  <div class="my-saltire columns t-margin-full">
+  <h3 class="text-centre t-margin">
+    Volunteer?
+  </h3>
+  <div class="my-saltire columns b-margin-full">
     <div class="column col-sm-12 col-6 col-mx-auto">
       <div class="columns">
         <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-up" class="btn btn-primary text-centre">Sign up now</a>
+          <a href="/sign-up" class="btn btn-block btn-primary text-centre">Sign up now</a>
         </div>
         <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-in" class="btn text-centre">Sign in</a>
+          <a href="/sign-in" class="btn btn-block text-centre">Sign in</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <h3 class="text-centre t-margin">
+    Group administrator?
+  </h3>
+  <div class="my-saltire columns b-margin-full">
+    <div class="column col-sm-12 col-6 col-mx-auto">
+      <div class="columns">
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-up-admin" class="btn btn-block text-centre">Request approval</a>
+        </div>
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-in-admin" class="btn btn-block text-centre">Group administrator sign in</a>
         </div>
       </div>
     </div>
