--- a/configuration/templates/account/auth/sign-up-admin.hbs
+++ b/configuration/templates/account/auth/sign-up-admin.hbs
@@ -33,9 +33,23 @@
       <p class="v-margin-full">
         Read our <a href="/privacy" target="_blank">privacy notice</a>
       </p>
-      <p class="v-margin-full">
-        Already have a group administrator account? <a href="/sign-in-admin">Sign in</a>
-      </p>
+      <h3>
+        Already have a group administrator account?
+      </h3>
+      <div class="t-margin b-margin-full">
+        <a href="/sign-in-admin" class="btn">Sign in as a group administrator</a>
+      </div>
+      <h3>
+        Volunteer?
+      </h3>
+      <div class="my-saltire columns t-margin">
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-up" class="btn text-center">Sign up as a volunteer</a>
+        </div>
+        <div class="column col-6 my-saltire-item align-centre">
+          <a href="/sign-in" class="btn text-centre">Sign in</a>
+        </div>
+      </div>
     </div>
   </div>
   <input type="hidden" name="redirect" id="redirect" value="home" />
