--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -37,9 +37,23 @@
         <p class="v-margin-full">
           Read our <a href="/privacy" target="_blank">privacy notice</a>
         </p>
-        <p class="v-margin-full">
-          Already have an account? <a href="/sign-in">Sign in</a>
-        </p>
+        <h3>
+          Already have an account?
+        </h3>
+        <div class="t-margin b-margin-full">
+          <a href="/sign-in" class="btn">Sign in</a>
+        </div>
+        <h3>
+          Group administrator?
+        </h3>
+        <div class="my-saltire columns t-margin">
+          <div class="column col-6 my-saltire-item align-centre">
+            <a href="/sign-up-admin" class="btn text-centre">Request approval</a>
+          </div>
+          <div class="column col-6 my-saltire-item align-centre">
+            <a href="/sign-in-admin" class="btn text-centre">Sign in</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
