--- a/configuration/templates/account/auth/approval-required.hbs
+++ b/configuration/templates/account/auth/approval-required.hbs
@@ -14,12 +14,12 @@
     {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
     Please ask your parent or guardian to open the link in the email sent to them from the Saltire Awards.
     {{else}}
-    TSI approval required. An email has been sent to
+    TSI approval required - an email has been sent to
     {{#if @root.data.accountInfo.local_authority ~}}
     {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
     {{#each contacts ~}}
     {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
-    {{title}}, the TSI contact for {{#if area}}{{area}}{{else}}{{../local_authority}}{{/if}}.
+    <a href="mailto:{{email}}">{{title}}</a>, your TSI contact for {{#if area}}{{area}}{{else}}{{../local_authority}}{{/if}}.
     {{/if ~}}
     {{/each ~}}
     {{/with ~}}
@@ -27,7 +27,7 @@
     {{/compare ~}}
   </p>
   <div id="primary-actions" class="empty-action">
-    <a href="/approval-email-send" class="btn btn-primary">Resend email</a>
+    <a href="/approval-email-send" class="btn btn-primary">Re-send approval request</a>
     {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
     <button onclick="revealForm()" class="btn">Change email address</button>
     {{/compare ~}}
