--- a/configuration/templates/account/auth/sign-up-details.hbs
+++ b/configuration/templates/account/auth/sign-up-details.hbs
@@ -22,7 +22,7 @@
     <div class="columns h-padding">
       <div class="column col-4 hide-sm"></div>
       <div class="column col-2">
-        <button id="detail-submit" class="btn btn-primary b-margin-full" type="submit">
+        <button id="detail-submit" class="btn btn-primary b-margin-full" type="submit" disabled="disabled">
           Submit details
         </button>
       </div>
