--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -344,7 +344,7 @@
       </aside>
     </div>
 
-    {{#ifAll layoutParts.sidebar @root.data.accountInfo.user_type ~}}
+    {{#ifAll layoutParts.sidebar @root.data.accountInfo.user_type (compare @root.data.accountInfo.approval_needed false) ~}}
     <div class="sidebar-present">
       <div class="columns col-gapless">
         <aside class="sidebar column col-2 col-lg-3 col-xl-3 hide-lg">
